# tl-renamer-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tl-renamer-cli.sln
tl-renamer-cli/: CMakeLists.txt  Program.cs  tl-renamer-cli.cpp  tl-renamer-cli.csproj  tl-renamer-cli.h  tl-renamer-cli.vcxproj  tl-renamer-cli.vcxproj.filters
