# CMakeList.txt : CMake project for tl-renamer-cli, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (tl-renamer-cli "tl-renamer-cli.cpp" "tl-renamer-cli.h")

# TODO: Add tests and install targets if needed.
